--- a/solarsystem/solarSystemTable.html
+++ b/solarsystem/solarSystemTable.html
@@ -4,6 +4,9 @@
 <meta charset="utf-8"> 
 <style>
       body{text-align:center;} 
+      .xian{
+        border:1px solid #151515;
+      }
 </style>
 <title>太阳系表格</title>
 </head>
@@ -15,7 +18,7 @@
        
         <tr style="background-color: rgb(235,235,235);">
             <th colspan="2" style="background-color: rgb(245,245,245);">      </th>
-            <th>名字</th>
+            <th class="xian">名字</th>
             <th>图片</th>
             <th>质量（10<sup>23</sup>）</th>
             <th>直径（Km） </th>
@@ -30,7 +33,7 @@
         <!--水星-->
         <tr style="background-color:rgb(245,245,245)">
             <th rowspan="4" colspan="2" style="background-color: rgb(235,235,235);">类地行星</th>
-            <th style="background-color: rgb(235,235,235);">水星</th>
+            <th class="xian" cstyle="background-color: rgb(235,235,235);">水星</th>
             <td><img src="Mercury.jpeg" alt="水星" ></td>
             <td>0.330</td>
             <td>4,879</td>
@@ -44,7 +47,7 @@
         </tr>
           <!--金星-->
         <tr style="background-color:rgb(250,250,250)">
-            <th style="background-color: rgb(235,235,235);">金星</th>
+            <th class="xian" style="background-color: rgb(235,235,235);">金星</th>
             <td><img src="Venus.jpeg" alt="金星" ></td>
             <td>4.87</td>
             <td>12,104</td>
@@ -59,7 +62,7 @@
         </tr>
           <!--地球-->
           <tr style="background-color:rgb(245,245,245)">
-            <th style="background-color: rgb(235,235,235);">地球</th>
+            <th class="xian" style="background-color: rgb(235,235,235);">地球</th>
             <td><img src="earth.jpeg" alt="地球" ></td>
             <td>5.97</td>
             <td>12,756</td>
@@ -74,7 +77,7 @@
         </tr>
           <!--火星-->
           <tr style="background-color:rgb(250,250,250)">
-            <th style="background-color: rgb(235,235,235);">火星</th>
+            <th class="xian" style="background-color: rgb(235,235,235);">火星</th>
             <td><img src="Mars.jpeg" alt="火星" ></td>
             <td>0.642</td>
             <td>6,792</td>
@@ -92,7 +95,7 @@
             <th rowspan="4" style="background-color: rgb(235,235,235);">类木行星</th>
             <th rowspan="2" style="background-color: rgb(235,235,235);">气巨星</th>
 
-            <th style="background-color: rgb(235,235,235);">木星</th>
+            <th class="xian" style="background-color: rgb(235,235,235);">木星</th>
             <td><img src="Jupiter.jpeg" alt="木星" ></td>
             <td>1898</td>
             <td>142,984</td>
@@ -107,7 +110,7 @@
         </tr>
           <!--土星-->
           <tr style="background-color: rgb(250,250,250);">
-            <th style="background-color: rgb(235,235,235);">土星</th>
+            <th class="xian" style="background-color: rgb(235,235,235);">土星</th>
             <td><img src="Saturn.jpeg" alt="土星" ></td>
             <td>568</td>
             <td>120,536</td>
@@ -123,7 +126,7 @@
           <!--天王星-->
           <tr style="background-color:rgb(245,245,245)">
             <th rowspan="2" style="background-color: rgb(235,235,235);">冰巨星</th>
-            <th style="background-color: rgb(235,235,235);">天王星</th>
+            <th class="xian" style="background-color: rgb(235,235,235);">天王星</th>
             <td><img src="Uranus.jpeg" alt="天王星" ></td>
             <td>86.8</td>
             <td>51,118</td>
@@ -138,7 +141,7 @@
         </tr>
           <!--海王星-->
           <tr style="background-color: rgb(250,250,250);">
-            <th style="background-color: rgb(235,235,235);">海王星</th>
+            <th class="xian" style="background-color: rgb(235,235,235);">海王星</th>
             <td><img src="Neptune.jpeg" alt="海王星" ></td>
             <td>102</td>
             <td>49,528</td>
@@ -154,7 +157,7 @@
           <!--冥王星-->
           <tr style="background-color:rgb(245,245,245)">
             <th colspan="2" style="background-color: rgb(235,235,235);">矮行星</th>
-            <th style="background-color: rgb(235,235,235);">冥王星</th>
+            <th class="xian" style="background-color: rgb(235,235,235);">冥王星</th>
             <td><img src="Pluto.jpeg" alt="冥王星" ></td>
             <td>0.0146</td>
             <td>2,370</td>
